--- a/static/base.css
+++ b/static/base.css
@@ -1,12 +1,4 @@
-.text-small {
-    font-size: 0.9rem !important;
-}
-
-.header {
-    background-color: #00d2ff;
-    background-image: linear-gradient(to right, #00d2ff 0%, #3a7bd5 100%);
-}
-
-.logo {
-    color: green;
+body {
+    height: 100vh;
+    background-image: url('/static/images/restaurant-background.jpg');
 }
