--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,10 +1,13 @@
 {% extends 'base.html' %}
-
+{% block title %}Login{% endblock %}
 {% block content %}
-<h2>Login</h2>
+
+<h1>Login</h1>
+
 <form action="" method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Login</button>
 </form>
+
 {% endblock %}
