--- a/templates/registration/edit_profile.html
+++ b/templates/registration/edit_profile.html
@@ -1,14 +1,21 @@
 {% extends 'base.html' %}
 {% block title %}Profile{% endblock %}
 {% block content %}
-
+{% load crispy_forms_tags %}
 
 
 {% if user.is_authenticated %}
-    <h1>Edit Profile</h1>
-    <form action="" method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
+    <form method="POST">
+        <div class="container bg-dark bg-opacity-50 mt-5">
+        <div class="col-md-6 mx-auto">
+            <h1 class="text-center">Register</h1>
+            {% csrf_token %}
+            {{ form|crispy }}
+            <div class="d-flex justify-content-center">
+            <button type="submit" class="btn btn-primary mt-3">Submit</button>
+            </div>
+        </div>
+        </div>
     </form>
 {% endif %}
 
