--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,13 +1,19 @@
 {% extends 'base.html' %}
 {% block title %}Login{% endblock %}
 {% block content %}
+{% load crispy_forms_tags %}
 
-<h1>Login</h1>
-
-<form action="" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Login</button>
-</form>
+<form method="POST">
+    <div class="container bg-light mt-5 bg-opacity-50">
+      <div class="col-md-6 mx-auto">
+        <h1 class="text-center">Login</h1>
+        {% csrf_token %}
+        {{ form|crispy }}
+        <div class="d-flex justify-content-center">
+          <button type="submit" class="btn btn-primary mt-3">Login</button>
+        </div>
+      </div>
+    </div>
+  </form>
 
 {% endblock %}
