--- a/templates/registration/registration.html
+++ b/templates/registration/registration.html
@@ -1,15 +1,20 @@
 {% extends 'base.html' %}
 {% block title %}Register{% endblock %}
 {% block content %}
-
-<h1>Register</h1>
+{% load crispy_forms_tags %}
 
 <form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <div class="container bg-light mt-5 bg-opacity-50">
+      <div class="col-md-6 mx-auto">
+        <h1 class="text-center">Register</h1>
+        {% csrf_token %}
+        {{ form|crispy }}
+        <div class="d-flex justify-content-center">
+          <button type="submit" class="btn btn-primary mt-3">Sign up</button>
+        </div>
+      </div>
+    </div>
   </form>
-
 
 
 {% endblock %}
