--- a/templates/registration/edit_profile.html
+++ b/templates/registration/edit_profile.html
@@ -8,7 +8,7 @@
     <form method="POST">
         <div class="container bg-dark bg-opacity-50 mt-5">
         <div class="col-md-6 mx-auto">
-            <h1 class="text-center">Register</h1>
+            <h1 class="text-center">Edit_profile</h1>
             {% csrf_token %}
             {{ form|crispy }}
             <div class="d-flex justify-content-center">
