--- a/templates/reservation/reservation_time.html
+++ b/templates/reservation/reservation_time.html
@@ -6,16 +6,15 @@
 <form method="POST">
     <div class="container bg-light mt-5 bg-opacity-50">
       <div class="col-md-6 mx-auto">
-        <h1 class="text-center">Choose a Time</h1>
+        <h1 class="text-center">Book a Time</h1>
         {% csrf_token %}
-        {% for field in form %}
-        {{ field }}
-        {% endfor %}
-        <div class="d-flex justify-content-center">
-          <button type="submit" class="btn btn-primary mt-3">Book</button>
+        <div class="mb-3">
+
         </div>
+        <div class="d-flex justify-content-center">
+          <button type="submit">See Availible Times</button>
       </div>
     </div>
-  </form>
-
+  </div>
+</form>
 {% endblock %}
