--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
           <div class="navbar-nav">
                 {% if user.is_authenticated %}
                     <a class="nav-item nav-link" href="{% url 'reservation' %}">Book a Table</a>
+                    <a class="nav-item nav-link" href="{% url 'edit_reservation' %}">Manage Reservation</a>
                     <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                     <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
                     
