--- a/templates/reservation/reservation.html
+++ b/templates/reservation/reservation.html
@@ -15,7 +15,7 @@
         </div>
         <div class="mb-3">
           <label for="book_date" class="form-label"><P>Date</P></label>
-          <input type="date" name="book_date" class="form-control" id="exampleInputPassword1">
+          <input type="date" name="book_date" id="date" class="form-control" id="exampleInputPassword1">
         </div>
         <div class="mb-3">
           {{ form.book_time }}
