--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -4,16 +4,14 @@
 {% load crispy_forms_tags %}
 
 <form method="POST">
-    <div class="container bg-light mt-5 bg-opacity-50">
-      <div class="col-md-6 mx-auto">
-        <h1 class="text-center">Login</h1>
-        {% csrf_token %}
-        {{ form|crispy }}
-        <div class="d-flex justify-content-center">
-          <button type="submit" class="btn btn-primary mt-3">Login</button>
-        </div>
+    <div class="col-md-6 mx-auto">
+      <h1 class="text-center header">Login</h1>
+      {% csrf_token %}
+      {{form|crispy}}
+      <div class="col-md-12 mt-4 text-center">
+      <button type="submit" class="btn btn-primary mb-2">Login</button>
       </div>
     </div>
+  </div>
   </form>
-
 {% endblock %}
