--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,33 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{% static 'css/style.css %'}">
+
     <title>{% block title %}{% endblock %}</title>
+    {% load static %}
+
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <h2><a class="navbar-brand" href="{% url 'home' %}">Wirséns</a></h2>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-                {% if user.is_authenticated %}
-                    <a class="nav-item nav-link" href="{% url 'reservation' %}">Book a Table</a>
-                    <a class="nav-item nav-link" href="{% url 'edit_reservation' %}">Manage Reservation</a>
-                    <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
-                    <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
-                    
-                {% else %}
-                    <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
-                    <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
-                {% endif %}
-          </div>
-        </div>
-      </nav>
-    {% block content %}
-    {% endblock %}
+  <div class="container-fluid min-vh-100">
+    <div class="row">
+      <div class="col-md-5 left">
+        <nav class="nav flex-column text-center">
+          <a class="navbar-brand text-white" href="{% url 'home' %}">Wirséns</a>
+          <a class="nav-link text-white" href="#">Menu</a>
+          <a class="nav-link text-white" href="#">About</a>
+          {% if user.is_authenticated %}
+          <a class="nav-link text-white" href="{% url 'reservation' %}">Make a Reservation</a>
+          <a class="nav-link text-white" href="{% url 'edit_reservation' %}">Your Reservations</a>
+          {% else %}
+          <a class="nav-link text-white" href="{% url 'register' %}">Register</a>
+          <a class="nav-link text-white" href="{% url 'login' %}">Login</a>
+          {% endif %}
+        </nav>
+      </div>
+      <div class="col-md-7 right text-white">
+        {% block content %}
+        {% endblock %}
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
