--- a/templates/reservation/reservation.html
+++ b/templates/reservation/reservation.html
@@ -5,9 +5,8 @@
 
 
 <form action="" method="POST">
-    <div class="container bg-light mt-5 bg-opacity-50">
       <div class="col-md-6 mx-auto">
-        <h1 class="text-center">Book a Table</h1>
+        <h1 class="text-center header">Book a Table</h1>
         {% csrf_token %}
         <div class="mb-3">
           <label for="party_size" class="form-label"><P>Number of Guests</P></label>
@@ -18,12 +17,20 @@
           <input type="date" name="book_date" id="date" class="form-control" id="exampleInputPassword1">
         </div>
         <div class="mb-3">
-          {{ form.book_time }}
+          <label for="book_time" class="form-label"><P>Time</P></label>
+          {{form.book_time}}
         </div>
+
         <div class="d-flex justify-content-center">
           <button type="submit">Check Availible Times</button>
       </div>
     </div>
-  </div>
 </form>
+{% if messages %}
+  {% for message in messages %}
+    <div class="bg-danger">
+    {{message}}
+  </div>
+  {% endfor %}
+{% endif %}
 {% endblock %}
