--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
           {% if user.is_authenticated %}
           <a class="nav-link text-white" href="{% url 'reservation' %}">Make a Reservation</a>
           <a class="nav-link text-white" href="{% url 'edit_reservation' %}">Your Reservations</a>
+          <a class="nav-link text-white" href="{% url 'logout' %}">Logout</a>
           {% else %}
           <a class="nav-link text-white" href="{% url 'register' %}">Register</a>
           <a class="nav-link text-white" href="{% url 'login' %}">Login</a>
