--- a/templates/reservation/reservation.html
+++ b/templates/reservation/reservation.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}Reservation{% endblock %}
 {% block content %}
-{% load crispy_forms_tags %}
 
 
 <form action="" method="POST">
@@ -18,11 +17,15 @@
         </div>
         <div class="mb-3">
           <label for="book_time" class="form-label"><P>Time</P></label>
-          {{form.book_time}}
+          <select name="book_time" required="" id="id_book_time" class="form-select">
+            {% for key, value in form.fields.book_time.choices %}
+            <option value="{{ key }}">{{ value }}</option>
+            {% endfor %}
+          </select>
         </div>
 
         <div class="d-flex justify-content-center">
-          <button type="submit">Check Availible Times</button>
+          <button type="submit" class="btn btn-primary">Book</button>
       </div>
     </div>
 </form>
